end to end tests

--- a/views/adminhome.html
+++ b/views/adminhome.html
@@ -6,7 +6,10 @@
 
     <div style="margin-bottom:20px;margin-top:20px;">
         <a href="/addmember">
-            <button id="save_person" class="btn-secondary no-float" type="submit">Add new member</button>
+            <button 
+                id="add-member" 
+                class="btn-secondary no-float"
+            >Add new member</button>
         </a>
     </div>
 
@@ -20,7 +23,12 @@
         </div>
 
         <div style="float:left;width:60%;">
-            <input type="text" name="query" placeholder="Enter member number or name here" id="search-field">
+            <input 
+                id="search-field" 
+                type="text" 
+                name="query" 
+                placeholder="Enter member number or name here"
+            >
         </div>
 
         <div style="float:right;width:20%;padding-left:2%;">
