--- a/views/layout.html
+++ b/views/layout.html
@@ -7,14 +7,14 @@
         <div id="wrap">
             <div class="navigation">
                 <div class="left">
-                    <a href="/">Home</a>
-                    <a href="/admin">Admin Home</a>
+                    <a id="home_link" href="/">Home</a>
+                    <a id="admin_link" href="/admin">Admin Home</a>
                 </div>
 
                 <div class="right">
-                    <a href="/login">Login</a>
-                    <a href="/logout">Logout</a>
-                    <a href="/signup">Signup</a>
+                    <a id="signin_link" href="/login">Signin</a>
+                    <a id="signout_link"href="/logout">Singout</a>
+                    <a id="signup_link"href="/signup">Signup</a>
                 </div>
             </div>
 
