--- a/views/login.html
+++ b/views/login.html
@@ -11,11 +11,11 @@
 	<div class="container-small">
 		<form action="/login" method="post">
 
-			<input type="text" name="email" tabindex=1 placeholder="Email adress">
+			<input id="email" type="text" name="email" tabindex=1 placeholder="Email adress">
 			<div class="inner-section-divider-small"></div>
-			<input type="password" name="password" tabindex=2 placeholder="Password">
+			<input id="password" type="password" name="password" tabindex=2 placeholder="Password">
 			<div class="inner-section-divider-small"></div>
-			<button type="submit" id="button_sign_in" class="btn-primary">Sign in</button>
+			<button id="button_sign_in" type="submit" class="btn-primary">Sign in</button>
 		</form>
 	</div>
 </div>
