--- a/views/newmember.html
+++ b/views/newmember.html
@@ -15,7 +15,7 @@
                 <div class="couterContainer">
                     <h3>Member id</h3>
                 </div>
-                <input class="short" name="id" placeholder="Membership id">
+                <input id="id" class="short" name="id" placeholder="Membership id">
             </div>
         </div>
 
@@ -24,13 +24,13 @@
                 <div class="couterContainer">
                     <h3>Full name*</h3>
                 </div>
-                <input class="short" name="firstName" placeholder="First name">
+                <input id="first-name" class="short" name="firstName" placeholder="First name">
             </div>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
-                <input class="short" name="lastName" placeholder="Last name">
+                <input id="last-name" class="short" name="lastName" placeholder="Last name">
             </div>
         </div>
 
@@ -39,7 +39,7 @@
                 <div class="couterContainer">
                     <h3>Title</h3>
                 </div>
-                <input class="short" name="title" placeholder="Title">
+                <input id="title" class="short" name="title" placeholder="Title">
             </div>
         </div>
 
@@ -48,7 +48,7 @@
                 <div class="couterContainer">
                     <h3>Date of birthday</h3>
                 </div>
-                <input class="short" type="date" name="birthday">
+                <input id="birthday" class="short" type="date" name="birthday">
             </div>
         </div>
 
@@ -63,25 +63,25 @@
                 <div class="couterContainer">
                     <h3>Address</h3>
                 </div>
-                <input class="short" name="address1" placeholder="Address line 1">
+                <input id="address1" class="short" name="address1" placeholder="Address line 1">
             </div>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
-                <input class="short" name="address2" placeholder="Address line 2">
+                <input id="address2" class="short" name="address2" placeholder="Address line 2">
             </div>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
-                <input class="short" name="address3" placeholder="Address line 3">
+                <input id="address3" class="short" name="address3" placeholder="Address line 3">
             </div>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
-                <input class="short" name="address4" placeholder="Address line 4">
+                <input id="address4" class="short" name="address4" placeholder="Address line 4">
             </div>
         </div>
 
@@ -90,8 +90,8 @@
                 <div class="couterContainer">
                     <h3>County</h3>
                 </div>
-                <input class="short-relative left" name="county" placeholder="County name">
-                <input class="short-relative right" name="postcode" placeholder="Postcode">
+                <input id="county" class="short-relative left" name="county" placeholder="County name">
+                <input id="postcode"class="short-relative right" name="postcode" placeholder="Postcode">
             </div>
         </div>
 
@@ -100,7 +100,7 @@
                 <div class="couterContainer">
                     <h3>Deliverer</h3>
                 </div>
-                <input class="short" name="deliverer" placeholder="Deliverer">
+                <input id="deliverer" class="short" name="deliverer" placeholder="Deliverer">
             </div>
         </div>
 
@@ -115,7 +115,7 @@
                 <div class="couterContainer">
                     <h3>Home phone</h3>
                 </div>
-                <input class="short" name="homePhone" placeholder="Home phone">
+                <input id="homePhone" class="short" name="homePhone" placeholder="Home phone">
             </div>
         </div>
 
@@ -124,7 +124,7 @@
                 <div class="couterContainer">
                     <h3>Mobile phone</h3>
                 </div>
-                <input class="short" name="mobilePhone" placeholder="Mobile phone">
+                <input id="mobilePhone" class="short" name="mobilePhone" placeholder="Mobile phone">
             </div>
         </div>
 
@@ -133,7 +133,7 @@
                 <div class="couterContainer">
                     <h3>Work phone</h3>
                 </div>
-                <input class="short" name="workPhone" placeholder="Work phone">
+                <input id="mobilePhone" class="short" name="workPhone" placeholder="Work phone">
             </div>
         </div>
 
@@ -142,7 +142,7 @@
                 <div class="couterContainer">
                     <h3>Contact primary email</h3>
                 </div>
-                <input class="short" name="email1" placeholder="Primary email">
+                <input id="email1" class="short" name="email1" placeholder="Primary email">
             </div>
         </div>
 
@@ -151,7 +151,7 @@
                 <div class="couterContainer">
                     <h3>Contact secondary email</h3>
                 </div>
-                <input class="short" name="email2" placeholder="Secondary email">
+                <input id="email2" class="short" name="email2" placeholder="Secondary email">
             </div>
         </div>
 
@@ -319,7 +319,7 @@
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
-                <button id="save_person" class="btn-primary left btn-standard-width" type="submit">Save</button>
+                <button id="create-member-btn" class="btn-primary left btn-standard-width" type="submit">Save</button>
                 <a href="javascript:history.back();">
                     <button id="cancel_person" class="btn-secondary right btn-standard-width">Cancel</button>
                 </a>
