--- a/views/showmember.html
+++ b/views/showmember.html
@@ -15,7 +15,7 @@
                         <p class="meta">Membership id</p>
                     </div>
                     <div class="value">
-                        <p class="meta">{{id}}</p>
+                        <p id="id" class="meta">{{id}}</p>
                     </div>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                         <p class="meta">Title</p>
                     </div>
                     <div class="value">
-                        <p class="meta">{{title}}</p>
+                        <p id="title" class="meta">{{title}}</p>
                     </div>
             </div>
 
@@ -34,7 +34,7 @@
                         <p class="meta">First name</p>
                     </div>
                     <div class="value">
-                        <p class="meta">{{firstName}}</p>
+                        <p id="first-name" class="meta">{{firstName}}</p>
                     </div>
             </div>
 
@@ -43,7 +43,7 @@
                     <p class="meta">Last name</p>
                 </div>
                 <div class="value">
-                    <p class="meta">{{lastName}}</p>
+                    <p id="last-name" class="meta">{{lastName}}</p>
                 </div>
             </div>
 
