--- a/views/signup.html
+++ b/views/signup.html
@@ -11,13 +11,35 @@
 	<div class="container-small">
 		<form action="/signup" method="post">
 
-			<input type="text" name="email" tabindex=1 placeholder="Email adress">
+			<input
+				id="email"
+				type="text" 
+				name="email" 
+				tabindex=1 
+				placeholder="Email adress"
+			>
 			<div class="inner-section-divider-small"></div>
-			<input type="password" name="password" tabindex=2 placeholder="Password">
+			<input 
+				id="password" 
+				type="password" 
+				name="password" 
+				tabindex=2 
+				placeholder="Password"
+			>
 			<div class="inner-section-divider-small"></div>
-			<input type="password" name="cpassword" tabindex=2 placeholder="Confirm Password">
+			<input 
+				id="cpassword" 
+				type="password" 
+				name="cpassword" 
+				tabindex=2 
+				placeholder="Confirm Password"
+			>
 			<div class="inner-section-divider-small"></div>
-			<button type="submit" id="button_sign_in" class="btn-primary">Sign up</button>
+			<button 
+				id="button_sign_up"
+				type="submit"
+				class="btn-primary"
+			>Sign up</button>
 		</form>
 	</div>
 </div>
