--- a/views/showmember.html
+++ b/views/showmember.html
@@ -323,10 +323,9 @@
 
         <a href="/members/{{ member.id }}/payments">
             <button
-                id="save_person" 
-                class="btn-primary right btn-standard-width" 
-                type="submit">
-                Add payment
+                id="add-payment-btn"
+                class="btn-primary right btn-standard-width"
+            >Add payment
             </button>
         </a>
 
