--- a/views/layout.html
+++ b/views/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <link rel= "stylesheet" type="text/css" href= "/css/main.css"> -->
+        <link rel= "stylesheet" type="text/css" href= "/css/main.css">
     </head>
     <body>
         <div id="wrap">
@@ -28,6 +28,6 @@
             </ul>
             <p class="rights meta"> <span id="date_rights">2015</span> <a href="http://www.friendsch.org/" target="_blank"> Friends of Chichester Harbour</a></p>
         </footer>
-        <script type="text/javascript" src="bundle.js"></script>
+        <script type="text/javascript" src="/js/bundle.js"></script>
     </body>
 </html>
