add admin home screen; remove unused tests

--- a/views/layout.html
+++ b/views/layout.html
@@ -13,8 +13,9 @@
 
                 <div class="right">
                     <a id="signin_link" href="/login">Signin</a>
-                    <a id="signout_link"href="/logout">Singout</a>
-                    <a id="signup_link"href="/signup">Signup</a>
+                    <a id="signout_link" href="/logout">Singout</a>
+                    <a id="signup_link" href="/signup">Signup</a>
+                    <a id="addmember_link" href="/addmember">Add Member</a>
                 </div>
             </div>
 
