--- a/views/adminhome.html
+++ b/views/adminhome.html
@@ -1,39 +1,330 @@
+<style type="text/css">
+
+.container-content {
+
+    float: left;
+    width: 70%; 
+}
+
+.container-controls {
+    float: left;
+    width: 25%; 
+    margin-left: 5%;
+    height: auto;
+}
+
+.button {
+    width: 9em;
+    height: 4em;
+    margin: 1em auto;
+    line-height: 4em;
+    text-align: center;
+    border: 1px solid pink;
+    border-radius: 2px;
+}
+.button:hover {
+    background-color: #f45; 
+}
+
+.container-search {
+    overflow: auto;
+    margin-bottom: 2em;
+}
+
+.search-status {
+    width: 15%;
+    float: left;
+    height: auto;
+    padding: 1em;
+}
+
+.search-boxes {
+    width: 70%;
+    float: left;
+    height: auto;
+    padding: 1em; 
+}
+
+.search-control {
+    width: 15%;
+    float: left;
+    height: auto;
+    padding: 1em;
+}
+
+.container-search-field {
+    margin-bottom: 1em;
+}
+
+.container-results {
+    overflow: auto;
+    border: 1px solid #aaa;
+}
+
+.table-headers {
+    overflow: auto;
+    border-bottom: 1px solid #aaa;
+
+}
+
+.table-rows {
+    overflow-y: scroll;
+    height: 200px;
+}
+
+.table-row {
+    border-bottom: 1px solid #ddd;
+    overflow: auto;
+}
+
+.header {
+    float: left;
+    width: 16.1%;
+    height: 2em;
+    text-align: left;
+    line-height: 2em;
+    padding-left: 20px;
+}
+</style>
+
 <div class="container-large">
 
-    <div class="header">
-        <h1>Administration</h1>
+    <div class="container-main">
+
+        <div class="container-content">
+
+            <div class="container-search">
+
+                <div class="search-status">
+                    <select class="no-margin use-max btn-standard-width" name="status">
+                        <option value="active" selected>Active</option>
+                        <option value="deleted">Deleted</option>
+                    </select>
+                </div>
+
+                <div class="search-boxes">
+                    <div class="container-search-field">
+                        <input 
+                            id="search-field"
+                            type="text" 
+                            name="query" 
+                            placeholder="Membership number"
+                        >
+                    </div>
+                    <div class="container-search-field">
+                        <input 
+                            id="search-field"
+                            type="text" 
+                            name="query" 
+                            placeholder="Email address"
+                        >
+                    </div>
+                    <div>
+                        <input 
+                            id="search-field"
+                            type="text" 
+                            name="query"
+                            placeholder="Last name"
+                        >
+                    </div>
+                </div>
+
+                <div class="search-control">
+                    <button id="search-button" class="btn-primary" type="submit">Search</button>
+                </div>
+            </div>
+
+            <div class="container-results">
+                <div class="table-results">
+                    <div class="table-headers">
+                        <div class="header -1">
+                            <p>Name</p>
+                        </div>
+                        <div class="header -2">
+                            <p>Title</p>
+                        </div>
+                        <div class="header -3">
+                            <p>Initials</p>
+                        </div>
+                        <div class="header -4">
+                            <p>First Name(s)</p>
+                        </div>
+                        <div class="header -5">
+                            <p>Last Subs</p>
+                        </div>
+                        <div class="header -6">
+                            <p>Payment</p>
+                        </div>
+                    </div>
+                    <div class="table-rows">
+                        <div class="table-row">
+                            <div class="header -1 result">
+                                <p>Fisher</p>
+                            </div>
+                            <div class="header -2 result">
+                                <p>Mr.</p>
+                            </div>
+                            <div class="header -3 result">
+                                <p>S.</p>
+                            </div>
+                            <div class="header -4 result">
+                                <p>William</p> 
+                            </div>
+                            <div class="header -5 result">
+                                <p>CASH 11/08/2011</p>
+                            </div>
+                            <div class="header -6 result">
+                                <p>$25</p>
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="header -1 result">
+                                <p>Fisher</p>
+                            </div>
+                            <div class="header -2 result">
+                                <p>Mr.</p>
+                            </div>
+                            <div class="header -3 result">
+                                <p>S.</p>
+                            </div>
+                            <div class="header -4 result">
+                                <p>William</p> 
+                            </div>
+                            <div class="header -5 result">
+                                <p>CASH 11/08/2011</p>
+                            </div>
+                            <div class="header -6 result">
+                                <p>$25</p>
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="header -1 result">
+                                <p>Fisher</p>
+                            </div>
+                            <div class="header -2 result">
+                                <p>Mr.</p>
+                            </div>
+                            <div class="header -3 result">
+                                <p>S.</p>
+                            </div>
+                            <div class="header -4 result">
+                                <p>William</p> 
+                            </div>
+                            <div class="header -5 result">
+                                <p>CASH 11/08/2011</p>
+                            </div>
+                            <div class="header -6 result">
+                                <p>$25</p>
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="header -1 result">
+                                <p>Fisher</p>
+                            </div>
+                            <div class="header -2 result">
+                                <p>Mr.</p>
+                            </div>
+                            <div class="header -3 result">
+                                <p>S.</p>
+                            </div>
+                            <div class="header -4 result">
+                                <p>William</p> 
+                            </div>
+                            <div class="header -5 result">
+                                <p>CASH 11/08/2011</p>
+                            </div>
+                            <div class="header -6 result">
+                                <p>$25</p>
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="header -1 result">
+                                <p>Fisher</p>
+                            </div>
+                            <div class="header -2 result">
+                                <p>Mr.</p>
+                            </div>
+                            <div class="header -3 result">
+                                <p>S.</p>
+                            </div>
+                            <div class="header -4 result">
+                                <p>William</p> 
+                            </div>
+                            <div class="header -5 result">
+                                <p>CASH 11/08/2011</p>
+                            </div>
+                            <div class="header -6 result">
+                                <p>$25</p>
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="header -1 result">
+                                <p>Fisher</p>
+                            </div>
+                            <div class="header -2 result">
+                                <p>Mr.</p>
+                            </div>
+                            <div class="header -3 result">
+                                <p>S.</p>
+                            </div>
+                            <div class="header -4 result">
+                                <p>William</p> 
+                            </div>
+                            <div class="header -5 result">
+                                <p>CASH 11/08/2011</p>
+                            </div>
+                            <div class="header -6 result">
+                                <p>$25</p>
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="header -1 result">
+                                <p>Fisher</p>
+                            </div>
+                            <div class="header -2 result">
+                                <p>Mr.</p>
+                            </div>
+                            <div class="header -3 result">
+                                <p>S.</p>
+                            </div>
+                            <div class="header -4 result">
+                                <p>William</p> 
+                            </div>
+                            <div class="header -5 result">
+                                <p>CASH 11/08/2011</p>
+                            </div>
+                            <div class="header -6 result">
+                                <p>$25</p>
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="header -1 result">
+                                <p>Fisher</p>
+                            </div>
+                            <div class="header -2 result">
+                                <p>Mr.</p>
+                            </div>
+                            <div class="header -3 result">
+                                <p>S.</p>
+                            </div>
+                            <div class="header -4 result">
+                                <p>William</p> 
+                            </div>
+                            <div class="header -5 result">
+                                <p>CASH 11/08/2011</p>
+                            </div>
+                            <div class="header -6 result">
+                                <p>$25</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-controls">
+            <div id="newmember-button" class="button">New Member</div>
+            <div id="newmember-button" class="button">Maintenance</div>
+        </div>
     </div>
-
-    <div style="margin-bottom:20px;margin-top:20px;">
-        <a href="/addmember">
-            <button 
-                id="add-member" 
-                class="btn-secondary no-float"
-            >Add new member</button>
-        </a>
-    </div>
-
-    <form style="display: block;overflow: auto;" action="/members/search" method="POST">
-        <div style="float:left;width:20%;padding-right:2%;">
-            <select class="no-margin use-max btn-standard-width" name="status">
-                <option style="color:#ccc;" class="meta" value="" disabled="" selected="">Select one</option>
-                <option value="active">Active</option>
-                <option value="deleted">Deleted</option>
-            </select>
-        </div>
-
-        <div style="float:left;width:60%;">
-            <input 
-                id="search-field" 
-                type="text" 
-                name="query" 
-                placeholder="Enter member number or name here"
-            >
-        </div>
-
-        <div style="float:right;width:20%;padding-left:2%;">
-            <!-- <input type="submit" value="search" id="search-button"> -->
-            <button id="search-button" class="btn-primary" type="submit">Search</button>
-        </div>
-    </form>
 </div>
