--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,7 +39,12 @@ html, body {
   height: 100%; }
 
 #wrap {
-  min-height: 92%; }
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0; }
 
 footer {
   margin-top: 80px;
@@ -74,17 +79,6 @@ footer {
 
 .no-float {
   float: none; }
-
-.container-large {
-  width: 80%;
-  margin: auto;
-  overflow: hidden;
-  margin-top: 80px; }
-  .container-large .section-label {
-    position: relative;
-    overflow: hidden;
-    padding-bottom: 13px;
-    border-bottom: 1px solid #eee; }
 
 .container-small {
   max-width: 320px;
@@ -688,8 +682,7 @@ input[type=submit] {
   padding: 0.75em;
   font-size: 20px;
   margin-top: 0.5em;
-  border-bottom: 1px solid #eee;
-  margin-bottom: 50px; }
+  border-bottom: 1px solid #eee; }
   .navigation a {
     text-decoration: none;
     color: #ccc;
