--- a/views/layout.html
+++ b/views/layout.html
@@ -22,13 +22,13 @@
             {{{ content }}}
         </div>
 
-        <footer>
+        <!-- <footer>
             <ul class="meta">
             <li><a href="http://www.friendsch.org/aboutus.html" target="_blank">About</a></li>
             <li class="desktop-tablet-only"><a href="mailto:secretary@friendsch.org" target="_blank">Contact</a></li>
             </ul>
             <p class="rights meta"> <span id="date_rights">2015</span> <a href="http://www.friendsch.org/" target="_blank"> Friends of Chichester Harbour</a></p>
-        </footer>
+        </footer> -->
         <script type="text/javascript" src="/js/bundle.js"></script>
     </body>
 </html>
