work in progress

--- a/views/new-member.html
+++ b/views/new-member.html
@@ -2,7 +2,7 @@
 
     <h1>New Member Form</h1>
 
-    <form action="/members" method="post">
+    <form action="/api/members" method="post">
 
         <div class="topSectionDividor">
             <ul>
