--- a/views/view-member.html
+++ b/views/view-member.html
@@ -222,45 +222,10 @@
     </div>
 
     
-    <div class="container-controls">
- 
-        <div class="member-buttons">
-            
-            <div id="newmember-button" class="button">
-                <a href="/addmember">
-                    Save Changes
-                </a>
-            </div>
-            
-            <div id="maintenance-button" class="button">Delete Member</div>
-        </div>
-
-        <div class="subscription-payment">
-            
-            <div class="button">Advance Sub</div>
-            
-            <div class="button">Refund</div>
-            
-            <div class="input-wrapper">
-                <p>Amount:</p>
-                <input id="payment-amount" type="text">
-            </div>
-        </div>
-
-        <div class="donation-payment">
-            <p>Amount:</p>
-            <input id="payment-amount" type="text">
-            
-            <div class="textarea-wrap">
-                <p>Notes:</p>
-                <textarea id="donation-notes"></textarea>
-            </div>
-            
-            <div class="button">Add</div>
-        </div>
-    </div>
+    <div class="container-controls"></div>
     
     <div class="container-bottom"></div>
     
     <p id="memberid" style="display:none;">{{member.id}}</p>
+    <p id="memberstatus" style="display:none;">{{member.status}}</p>
 </div>
